css/main.css
@import url('https://fonts.googleapis.com/css2?family=Nova+Round&display=swap');

:root {
    --color-brown: #867070;
    --color-peach: #D5B4B4;
    --color-cream: #E4D0D0;
    --color-skin: #F5EBEB;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;

}

body {
    font-family: 'Roboto', sans-serif;
}

h1 {
    font-size: 50px;
    font-family: 'Nova Round', cursive;
    letter-spacing: -4px;
    ;
}

.contenedor {
    width: 90%;
    max-width: 1400px;
    margin: auto;
    overflow: hidden;

}

header {
    background-color: var(--color-skin);
}

header::before {
    content: "";
    display: block;
    margin-bottom: 80px;
}

nav {
    width: 100%;
    height: 80px;
    background-color: var(--color-peach);
    border-bottom: 1px solid transparent;
    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, .2);
    position: fixed;
    top: 0;
    z-index: 100;
}

.nav {
    display: flex;
    height: 80px;
    width: 100%;
    align-items: center;
}

.enlaces-header {
    font-weight: 400;
    margin: auto;
    transition: all ease-in-out .6s;
}

.nav .enlaces-header a {
    color: #000;
    text-decoration: none;
    margin-left: 20px;
    padding: 12px;
    border-radius: 10px;
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
}

.nav .enlaces-header a:hover {
    color: #fff;
    background-color: var(--color-brown);
    border-color: sienna;
    transition: all ease-in-out .5s;
}

.hamburguer {
    height: 80px;
    width: 80px;
    text-align: center;
    z-index: 100;
    cursor: pointer;
    transition: color 0.5s ease-in;
    display: none;
}

.hamburguer>i {
    font-size: 25px;
    line-height: 78px;
}

.titulospro {
    text-align: left;
    margin: 20px;
}

.contenido-header {
    width: 80%;
    height: 600px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    margin: 0 auto;
}

.contenido-header>img {
    margin-top: 90px;
    height: 400px;
    margin-left: 50px;
    clip-path: circle(35.0% at 50% 30%);
    animation: ease-in animacion 0.5s;
}

.textos-header {
    margin: 0 0 0 30px;
}

.contenido-header p {
    font-weight: 400;
    margin-top: 14px;
    color: #000;
    text-align: justify;
}

@keyframes animacion {
    0% {
        transform: scale(0);
    }

    100% {
        transform: scale(1);
    }
}

.contenido-header a {
    margin: 28px 0 0 0;
    width: 150px;
    display: inline-block;
    background-color: var(--color-brown);
    text-align: center;
    color: #fff;
    text-decoration: none;
    padding: 12px 0;
    border-radius: 5px;
    font-weight: 400;
    font-size: 16px;
    text-transform: uppercase;
    box-shadow: 0 8px 32px rgba(97, 31, 31, 0.46);
}

/* ######################### EDUCATION ######################### */

.section-education {
    /* background-color: rgb(110, 66, 231); */
    background-color: var(--color-cream);
}

.section-education .title {
    display: block;
    margin: 15px 0;
    width: 100%;
    text-align: center;
    text-transform: uppercase;
}

.content-education {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    padding-bottom: 30px;
}

.education {
    width: 30%;
    background-color: #fff;
    border-radius: 8px;
    padding: 30px;
}

.education i {
    border: 2px solid var(--color-brown);
    border-radius: 50%;
    background-color: var(--color-brown);
    color: #fff;
    width: 40px;
    height: 40px;
    font-size: 22px;
    text-align: center;
    line-height: 36px;
}

.education:hover {
    background-color: var(--color-brown);
    box-shadow: 0 0 8px gray;
    transition: all ease-in-out .4s;
    color: #fff;
}

.content-education .education a {
    display: block;
    font-size: 12px;
    margin-bottom: calc(10px + 14px + 4px + 2px + 1px);
}

.content-education .education:hover a {
    color: #fff;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 14px;
    border: var(--color-skin) solid 2px;
    padding: 7px;
    border-radius: 7px;
    text-align: center;
    margin-top: 10px;
    margin-bottom: auto;
}

.content-education .education a {
    color: #000;

    font-size: 12px;
    text-decoration: none;
}

/* ######################### CERTIFICATES ######################### */
.section-certificates .title {
    display: block;
    margin: 15px 0 0 0;
    width: 100%;
    text-align: center;
    text-transform: uppercase;
}

.content-certificates {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    padding-bottom: 30px;

}

.certificates {
    width: 22%;
    border-radius: 5px;
    border: 2px solid var(--color-brown);
    padding: 15px;
    text-align: center;
    margin-top: 15px;
    background-color: var(--color-cream);
}

.certificates img {
    height: 100px;
    width: auto;
}

.certificates a {
    font-size: 12px;
    color: gray;
    text-decoration: none;
}

.certificates:hover {
    background-color: var(--color-brown);
    box-shadow: 0 0 8px gray;
    color: #fff;
    transform: scale(1.05);
    transition: all ease-in-out .7s;
}

.certificates a:hover {
    color: #fff;
}

/* ######################### PIE DE PAGINA ######################### */
footer {
    background-color: var(--color-brown);
    padding: 50px 0 20px 0;
    overflow: hidden;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: auto;
}

.partFooter {
    width: 22%;
    text-align: center;
}

.partFooter:first-child {
    /* Lo que hacemos aquí es definir la altura del contenedor de la imagen
    en 0, para que no ocupe espacio vertical, pero, si va a continuar ocupando
    espacio horizontal, por lo que el contenido no se corre horizontalmente. */
    height: 0;
    /* La imagen tiene un clip-path, que lo que hace es volver el contenido 
    que no se va a mostrar, invisible, por lo que no se verá, pero, seguirá
    ocupando espacio. */
    /* Al establecer una altura de 0, evitamos el espacio sobrante al final
    de la página, y al establecer overflow en visible, dejamos que la imagen
    se sigua mostrando. */
    overflow-y: visible;
}

.partFooter img {
    width: 60%;
    clip-path: circle(35.0% at 50% 30%);
}

.partFooter h4 {
    color: #fff;
    font-size: 20px;
    font-weight: 400;
    margin-bottom: 15px;
    background-color: var(--color-peach);
    padding: 5px 0;
    border: 1px solid var(--color-brown);
    border-radius: 5px;
}

.contact {
    margin: 10px;
    display: block;
    text-align: left;
}

.contact>i {
    float: left;
    margin: 0 0 0 10px;
    color: #fff;
    border-radius: 50%;
    border: 1px solid #fff;
    height: 30px;
    width: 30px;
    line-height: 28px;
    text-align: center;
    align-items: center;
}

.contact>p {
    margin-left: 50px;
    align-items: center;
    line-height: 28px;
    font-weight: 500;
    color: #fff;
}


.partFooter>a {
    display: block;
    text-decoration: none;
    color: #fff;
    margin-bottom: 10px;
    font-weight: 500;
    padding: 5px;
}

.partFooter>a:hover {
    background-color: var(--color-peach);
    border-color: var(--color-peach);
    border-radius: 5px;
    transition: all ease-in-out .6s;
}

.social-media>a>i {
    font-size: 20px;
    display: inline-block;
    color: #fff;
    width: 38px;
    border: 1px solid #fff;
    height: 38px;
    line-height: 36px;
    cursor: pointer;
    margin-top: 20px;
    text-align: center;
    transition: all ease-in-out .6s;
    margin-right: 5px;
    border-radius: 50%;
}

.social-media>a>i:hover {
    background-color: var(--color-cream);
    border-color: var(--color-peach);
}

/* ############################# BREAKPOINTS ############################### */
@media screen and (max-width: 700px) {
    .hamburguer {
        display: block;
    }

    .enlaces-header {
        position: fixed;
        background-color: var(--color-cream);
        top: 0;
        right: 0;
        width: 100%;
        height: 100vh;
        display: flex;
        align-items: center;
        flex-direction: column;
        clip-path: circle(0.0% at 0 0);
    }

    .nav .hamburgueropen {
        clip-path: circle(150.0% at 0 0);
    }

    .nav .enlaces-header a {
        color: #fff;
        background-color: var(--color-brown);
        text-transform: uppercase;
        font-weight: 800;
        width: 50%;
        text-align: center;
        margin-top: 20px;
    }

    h1 {
        font-size: 28px;
        margin-top: 10px;
    }

    .textos-header {
        margin: 0px;
    }

    .contenido-header {
        display: block;
        height: auto;
        margin-bottom: 15px;
    }

    .contenido-header>img {
        margin: 25px 0 0 0;
        width: 150px;
        height: 150px;
    }

    /* SECTION EDUCATION */
    .education {
        width: 90%;
        margin-bottom: 15px;
    }

    /* SECTION CERTIFICATES */
    .certificates {
        width: 45%;
    }

    .certificates img {
        height: 80px;
    }

    /* SECTION FOOTER media */
    .partFooter img {
        display: none;
    }

    .partFooter {
        width: 80%;
    }
}

